assets/css/styles.css
/*===== GOOGLE FONTS =====*/
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
/*===== VARIABLES CSS =====*/
:root {
    --header-height: 3rem;
    --font-semi: 600;
}

/*===== Colors =====*/
/* Change favorite color */
:root {
    /* Change favorite color */
    --hue-color: 224; /* Purple 250 - Green 142 - Blue 230 - Pink 340 */
    /* HSL color mode */ /*
    --first-color: #4070F4; */
    --first-color: hsl(var(--hue-color), 89%, 60%); /*
    --second-color: #0E2431; */
    --first-color-second: hsl(var(--hue-color), 56%, 12%);
    --first-color-alt: hsl(var(--hue-color), 57%, 53%);
    --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
    --title-color: hsl(var(--hue-color), 8%, 12%);
    --text-color: hsl(var(--hue-color), 8%, 45%);
    --text-color-light: hsl(var(--hue-color), 8%, 65%);
    --input-color: hsl(var(--hue-color), 70%, 96%);
    --body-color: hsl(var(--hue-color), 60%, 99%);
    --container-color: #FFF;
}

/*===== Font and typography =====*/
:root {
    --body-font: 'Poppins', sans-serif;
    --big-font-size: 2rem;
    --h1-font-size: 1.5rem;
    --h2-font-size: 1.25rem;
    --h3-font-size: 1.125rem;
    --normal-font-size: 0.938rem;
    --small-font-size: .813rem;
    --smaller-font-size: .75rem;
}
/*========== Font weight ==========*/
:root {
    --font-medium: 500;
    --font-semi-bold: 600;
}

@media screen and (min-width: 768px) {
    :root {
        --big-font-size: 3.5rem;
        --h2-font-size: 2rem;
        --normal-font-size: 1rem;
    }
}

/*===== Margins =====*/
:root {
    --mb-1: 0.5rem;
    --mb-2: 1rem;
    --mb-3: 1.5rem;
    --mb-4: 2rem;
    --mb-5: 2.5rem;
    --mb-6: 3rem;
}

/*===== z index =====*/
:root {
    --z-back: -10;
    --z-normal: 1;
    --z-tooltip: 10;
    --z-fixed: 100;
}

/*===== BASE =====*/
*,::before,::after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    margin: var(--header-height) 0 0 0;
    font-family: var(--body-font);
    font-size: var(--normal-font-size);
    background-color: var(--body-color);
    color: var(--first-color-second);
}

h1,h2,h3,h4 {
    color: var(--title-color);
    font-weight: var(--font-semi-bold);
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

img {
    max-width: 100%;
    height: auto;
    display: block;
}

/*===== CLASS CSS ===== */
.section-title {
    position: relative;
    font-size: var(--h2-font-size);
    color: var(--first-color);
    margin-top: var(--mb-2);
    margin-bottom: var(--mb-4);
    text-align: center;
}
.section-title:after {
    position: absolute;
    content: "";
    width: 64px;
    height: 0.18rem;
    left: 0;
    right: 0;
    margin: auto;
    top: 2rem;
    background-color: var(--first-color);
}

.section {
    padding: 2rem 0 4rem;
}

/*===== LAYOUT =====*/
.container {
    max-width: 768px;
    margin-left: var(--mb-3);
    margin-right: var(--mb-3);
}
.grid {
    display: grid;
    gap: 1.5rem;
}

.header {
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: var(--z-fixed);
    background-color: var(--body-color);
    box-shadow: 0 1px 4px rgba(146,161,176,.15);
}

/*===== NAV =====*/
.nav {
    /* test */
    max-width: 968px;
    height: var(--header-height);
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-weight: var(--font-semi);
}

@media screen and (max-width: 767px) {
    .nav__menu {
        position: fixed;
        top: var(--header-height);
        right: -100%;
        width: 80%;
        height: 100%;
        padding: 2rem;
        background-color: var(--second-color);
        transition: .3s;
    }
}
.nav__item {
    margin-bottom: var(--mb-4);
}
.nav__link {
    position: relative;
    color: #fff;
}
.nav__link:hover {
    position: relative;
    /* Try */
    color: var(--first-color);
    /* Try */
}
.nav__link:hover:after {
    position: absolute;
    content: "";
    width: 100%;
    height: 0.18rem;
    left: 0;
    top: 2rem;
    background-color: var(--first-color);
}
.nav__logo {
    color: var(--second-color);
}
/* Try */
.nav__logo {
  color: var(--title-color);
  font-weight: var(--font-medium);
}

.nav__logo:hover {
	color: var(--first-color);
}
/* Try above */
.nav__toggle {
    color: var(--second-color);
    font-size: 1.5rem;
    cursor: pointer;
}

/* Test */
.nav__logo,
.nav__toggle {
  color: var(--title-color);
  font-weight: var(--font-medium);
}
/* Test above */

/*Active menu*/
.active::after {
    position: absolute;
    content: "";
    width: 100%;
    height: 0.18rem;
    left: 0;
    top: 2rem;
    background-color: var(--first-color);
}

/*=== Show menu ===*/
.show {
    right: 0;
}

/*===== HOME =====*/
.home {
    height: calc(100vh - 3rem);
    row-gap: 1rem;
}

.home__container {
    gap: 1rem;
}

.home__content {
    grid-template-columns: .5fr 3fr;
    padding-top: 3.5rem;
    align-items: center;
}

.home__social {
	display: grid;
	grid-template-columns: max-content;
	row-gap: 1rem;
}

.home__social-icon {
    font-size: 1.5rem;
    color: var(--first-color);
}

.home__social-icon:hover {
    color: var(--first-color-alt);
}

.home__blob {
    width: 200px;
    fill: var(--first-color);
}

.home__blob-img {
    width: 170px;
}

.home__data {
    grid-column: 1/3;
}

.home__title {
    font-size: var(--big-font-size);
}

.home__subtitle {
    font-size: var(--h3-font-size);
    color: var(--text-color);
    font-weight: var(--font-medium);
    margin-bottom: var(--mb-2);
}

.home__scroll {
    display: none;
}

.home__scroll-button {
    color: var(--first-color);
    transition: .3s;
}

.home__scroll-button:hover {
    transform: translateY(.25rem);
}

.home__scroll-mouse {
    font-size: 2rem;
}

.home__scroll-name {
    font-size: var(--small-font-size);
    color: var(--title-color);
    font-weight: var(--font-medium);
    margin-right: var(--mb-0-25);
}

.home__scroll-arrow {
    font-size: 1.25rem;
}

/*BUTTONS*/
.button {
    display: inline-block;
    background-color: var(--first-color);
    color: #fff;
    padding: .75rem 2.5rem;
    font-weight: var(--font-semi);
    border-radius: .5rem;
}
.button:hover {
    box-shadow: 0 10px 36px rgba(0,0,0,.15);
}
/* Try */
.button:hover {
    background-color: var(--first-color-alt);
}
.button__icon {
    font-size: 1.25rem;
    margin-left: var(--mb-1);
    transition: .3s;
}
.button--flex {
    display: inline-flex;
    align-items: center;
}
/* try above */

/* ===== ABOUT =====*/
.about__container {
    row-gap: 2rem;
    text-align: center;
}
.about__subtitle {
    margin-bottom: var(--mb-2);
}
.about__img {
    justify-self: center;
}
.about__img img {
    width: 200px;
    border-radius: .5rem;
}

/* ===== SKILLS =====*/
.skills__container {
    row-gap: 2rem;
    text-align: center;
}
.skills__subtitle {
    margin-bottom: var(--mb-2);
}
.skills__text {
    margin-bottom: var(--mb-2);
}
.skills__data {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    font-weight: var(--font-semi);
    padding: .5rem 1rem;
    margin-bottom: var(--mb-4);
    border-radius: .5rem;
    box-shadow: 0 4px 25px rgba(14,36,49,.15);
}
.skills__icon {
    font-size: 2rem;
    margin-right: var(--mb-2);
    color: var(--first-color);
}
.skills__names {
    display: flex;
    align-items: center;
}
.skills__bar {
    position: absolute;
    left: 0;
    bottom: 0;
    background-color: var(--first-color);
    height: .25rem;
    border-radius: .5rem;
    z-index: var(--z-back);
}
.skills__html {
    width: 80%;
}
.skills__css {
    width: 80%;
}
.skills__bootstrap {
    width: 70%;
}
.skills__js {
    width: 50%;
}
.skills__php {
    width: 60%;
}
.skills__img {
    border-radius: .5rem;
}

/* ===== WORK =====*/
.work {
    text-align: center;
}
.work__container {
    row-gap: 2rem;
}
.work__img {
   box-shadow: 0 4px 25px rgba(14,36,49,.15);
   border-radius: .5rem;
   overflow: hidden; 
}
.work__img img {
    transition: 1s;
    cursor: pointer;
}
.work__img img:hover {
    transform: scale(1.1);
}
/* ===== CONTACT =====*/
.contact__input {
    width: 100%;
    font-size: var(--normal-font-size);
    font-weight: var(--font-semi);
    padding: 1rem;
    border-radius: .5rem;
    border: 1.5px solid var(--first-color-second);
    outline: none;
    margin-bottom: var(--mb-4);
}
.contact__button {
    display: block;
    border: none;
    outline: none;
    font-size: var(--normal-font-size);
    cursor: pointer;
    margin-left: auto;
}

/* ===== FOOTER =====*/
.footer {
    background-color: var(--first-color-second);
    color: #fff;
    text-align: center;
    font-weight: var(--font-semi);
    padding: 2rem 0 3rem;
}
.footer__title {
    font-size: 2rem;
    margin-bottom: var(--mb-4);
}
.footer__social {
    margin-bottom: var(--mb-4);
}

.footer__icon {
    font-size: 1.5rem;
    color: #fff;
    margin: 0 var(--mb-2);
}

/* ===== MEDIA QUERIES=====*/
/* For small devices */
@media screen and (max-width: 350px) {
    .container {
        margin-left: var(--mb-2);
        margin-right: var(--mb-2);
    }

    .home__blob {
        width: 180px;
    }
}

/* For medium devices */
@media screen and (min-width: 568px){
    .home__content{
        grid-template-columns: max-content 1fr 1fr;
    }
    .home__data {
        grid-column: initial;
    }
    .home__img {
        order: 1;
        justify-self: center;
    }
}

@media screen and (min-width: 768px) {
    .container {
        margin-left: auto;
        margin-right: auto;
    }
    
    body {
        margin: 0;
    }

    .section {
        padding: 6rem 0 2rem;
    }
    /* test above */
    
    .section-title {
        margin-bottom: var(--mb-6);
    }
    .section-title::after {
        width: 80px;
        top: 3rem;
    }

    .header,
    .main,
    .footer__container {
        padding: 0 1rem;
    }
    
    .nav {
        height: calc(var(--header-height) + 1rem);
    }
    .nav__list {
        display: flex;
        padding-top: 0;
    }
    .nav__item {
        margin-left: var(--mb-4);
        margin-bottom: 0;
    }
    .nav__toggle {
        display: none;
    }
    .nav__link {
        color: var(--first-color-second);
    }

    .home {
        height: 100vh;
    }

    .home__container {
        row-gap: 5rem;
    }
    .home__content {
        padding-top: 5.5rem;
        column-gap: 2rem;
    }
    .home__blob {
        width: 270px;
    }
    /* Test above */
    /*
    .home__data {
        align-self: flex-end;
    }
    .home__social {
        padding-top: 0;
        padding-bottom: 2.5rem;
        flex-direction: row;
        align-self: flex-end;
    }
    .home__social-icon {
        margin-bottom: 0;
        margin-right: var(--mb-4);
    } */
    .about__container, .skills__container {
        grid-template-columns: repeat(2, 1fr);
        align-items: center;
        text-align: initial;
    }
    .about__img img {
        width: 300px;
    }

    .work__container {
        grid-template-columns: repeat(3, 1fr);
        grid-template-rows: repeat(2, 1fr);
        column-gap: 2rem;
    }

    .contact__form {
        width: 360px;
    }
    .contact__container {
        justify-items: center;
    }
}

/* For large devices */
@media screen and (min-width: 1024px) {
    .header,
    .main,
    .footer__container {
        padding: 0;
    }

    .home__blob {
        width: 320px;
    }
    .home__social {
        transform: translateX(-6rem);
    }

    /*
    .bg-grid {
        margin-left: auto;
        margin-right: auto;
    }
    .home__img {
        right: 1%;
    }
    */
}

